Fixed fonts formatting and querystring parsing
Fixed an issue where the default formatting was for Century Gothic font, and the backup font (Verdana) caused elements to overlap. Set the default font to Verdana to ease formatting pain. Fixed QueryString functionality such that the UI can now read query strings it is supplied and pass them on to the API. Allows URL sharing once functionality is added to modify URLs to reflect state.

--- a/DataNervesUI/Content/NewsLibrary.css
+++ b/DataNervesUI/Content/NewsLibrary.css
@@ -11,9 +11,10 @@
 
 /* Search form elements
 ----------------------------------------------------------*/
-#NewsSearchFormWrapper {
+#NewsFreqFormWrapper {
     position: relative;
     min-height: 360px;
+    height: 400px;
 }
 
 #SearchIncrementRadioGroup {
@@ -43,7 +44,7 @@
 /* Radio group */
 #NewsFormRadioGroupWrapper {
     position: absolute; 
-    top: 189px; 
+    top: 214px; 
     left: 249px;
     font-size: 0.90em;
 }
