--- a/DataNervesUI/Content/Site.css
+++ b/DataNervesUI/Content/Site.css
@@ -12,7 +12,7 @@ body {
     border-top: solid 10px #000;
     color: #676767;
     font-size: .80em;
-    font-family: "Century Gothic", Verdana, Helvetica, Sans-Serif;
+    font-family: 'Verdana', sans-serif;
     margin: 0;
     padding: 0;
 }
